reverted fixed site-header becuase it didn't look good on mobile. Partial code for narrow screens, but zoom events are not detected so still quite useless for mobile.

--- a/css/site-wide.scss
+++ b/css/site-wide.scss
@@ -13,7 +13,7 @@ html{
 body {
   border: 0;
   margin: 0;
-  padding-top: 10em;
+  // padding-top: 0em;
   height: 100%
 }
 
@@ -23,7 +23,7 @@ use sane css boxing model
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 /*
-get rid of outline boxes after selecting an element. technically has bad accessibility implications 
+get rid of outline boxes after selecting an element. technically has bad accessibility implications
 */
 :focus {
 	outline:0;
@@ -56,7 +56,7 @@ $primary-colour: #4B98EB;
 	{
 		text-decoration:$decoration-hover;
 	}
-} 
+}
 
 /*
 >>>>>>>>>>>>> SITEWIDE
@@ -114,14 +114,13 @@ iframe
 #site-header {
     background-color: $primary-colour;
     border-radius: 0 0 1em 1em;
-    position: fixed;
+    // position: fixed;
     width: 100%;
-    top: 0;
-    
+    text-align: center;
+
 	h1 {
 		margin: 0;
 		padding-top: 0.5em;
-		text-align:center;
 		color: #FFFFFF;
 	}
 }
@@ -147,13 +146,13 @@ iframe
     border-radius: 0 0 1em 1em;
     width: 100%;
 */
-    
+		// text-align: center;
+
 	ul
 	{
 		list-style-type:none;
 		margin:0;
 		padding:0;
-		text-align: center;
 	}
 
 	li
@@ -248,7 +247,14 @@ div.gallery-pic
 	width: $thumbnail-width;
 	overflow: hidden;
 	text-align:center;
-	
+
 	display:inline-block;
 	margin: 0.25em;
+}
+
+/*
+>>>>>>>>>>>>>>>> Dual Menu Shenagins
+*/
+#nav-menu select {
+  display: none;
 }
